[vr] handle sizing to children and anchoring

Previously we would not relayout children if the size changed. This is
problematic for children that wish to anchor to their parent.

Bug: 821220
Cq-Include-Trybots: luci.chromium.try:linux_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I3cbc91fd9a4d4d398d8ef3eba5f42b1f577f46f2
Reviewed-on: https://chromium-review.googlesource.com/962972
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543361}
Former-commit-id: a1ccbb60bbcb063fd9b1f614dfad89e6fcdbe9fd